<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/schedule_add_test_button"
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Добавить расписание"
                android:src="@android:drawable/ic_menu_add"
                android:tint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/schedule"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/schedule_add_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Добавить расписание"
                android:src="@android:drawable/ic_menu_add"
                android:tint="#000000" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/settings"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/allow_notifications"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/allow_notifications" />

        <Switch
            android:id="@+id/allow_vibration"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/allow_vibration" />

        <Button
            android:id="@+id/update_tables_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Обновить таблицы расписания" />

    </LinearLayout>
</ScrollView>
